apps/mealie/mealie-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"mealie","namespace":"mealie"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"mealie"}},"template":{"metadata":{"labels":{"app":"mealie"}},"spec":{"containers":[{"env":[{"name":"POSTGRES_PASSWORD","valueFrom":{"secretKeyRef":{"key":"postgres-password","name":"mealie-secrets"}}},{"name":"SMTP_PASSWORD","valueFrom":{"secretKeyRef":{"key":"smtp-password","name":"mealie-secrets"}}}],"envFrom":[{"configMapRe [...]
  name: mealie
  namespace: mealie
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mealie
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
      - env:
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              key: postgres-password
              name: mealie-secrets
        - name: SMTP_PASSWORD
          valueFrom:
            secretKeyRef:
              key: smtp-password
              name: mealie-secrets
        image: ghcr.io/mealie-recipes/mealie:v3.3.0
        imagePullPolicy: IfNotPresent
        name: mealie
        ports:
        - containerPort: 9000
          protocol: TCP
        resources:
          limits:
            memory: 1000Mi
          requests:
            memory: 500Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/data
          name: mealie-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Exists
      volumes:
      - name: mealie-data
        persistentVolumeClaim:
          claimName: mealie-data-pvc
