apps/mealie/mealie-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"mealie","namespace":"mealie"},"spec":{"ports":[{"nodePort":30925,"port":9000,"targetPort":9000}],"selector":{"app":"mealie"},"type":"NodePort"}}
  name: mealie
  namespace: mealie
spec:
  clusterIP: 10.99.183.97
  clusterIPs:
  - 10.99.183.97
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30925
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: mealie
  sessionAffinity: None
  type: NodePort
