apps/mealie/mealie-ingress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/proxy-body-size":"50m","nginx.ingress.kubernetes.io/proxy-read-timeout":"600","nginx.ingress.kubernetes.io/proxy-send-timeout":"600"},"name":"mealie-ingress","namespace":"mealie"},"spec":{"ingressClassName":"nginx","rules":[{"host":"mealie.coultonf.com","http":{"paths":[{"backend":{"service":{"name":"mealie","port":{"number":9000}}},"path":"/","pathType":"Prefix"}]}}]}}
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: mealie-ingress
  namespace: mealie
spec:
  ingressClassName: nginx
  rules:
  - host: mealie.coultonf.com
    http:
      paths:
      - backend:
          service:
            name: mealie
            port:
              number: 9000
        path: /
        pathType: Prefix
